[package]
name = "homophones-rs"
version = "1.0.0"
authors = ["John Baber-Lucero <cargo@frundle.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
docopt = "1"
serde = { version = "1", features = ["derive"] }
regex = "1"
