[package]
name = "homophones"
version = "1.0.0"
authors = ["John Baber-Lucero <cargo@frundle.com>"]
license = "GPL-3.0"
description = "Print homophones for a given word"
homepage = "https://github.com/jbaber/homophones-rs"
repository = "https://github.com/jbaber/homophones-rs"
readme = "README.md"
edition = "2018"

[dependencies]
docopt = "1"
serde = { version = "1", features = ["derive"] }
regex = "1"
